--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Login to GHCR
       run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+    - name: Lowercase the repo owner
+      run: |
+        echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
     - name: Build and push
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
+        docker build -t ghcr.io/${{ env.REPO_OWNER }}/python-app:latest .
+        docker push ghcr.io/${{ env.REPO_OWNER }}/python-app:latest
