--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -18,3 +18,4 @@ jobs:
       run: |
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest
+        docker tag $IMAGE:latest $IMAGE:${{ github.sha }}
